--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.10,<4.0"
 dependencies = [
     "django (>=5.2.8,<6.0.0)",
     "djangorestframework (>=3.16.1,<4.0.0)",
@@ -14,7 +14,12 @@ dependencies = [
     "psycopg2-binary (>=2.9.11,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "drf-spectacular (>=0.29.0,<0.30.0)",
-    "django-filter (>=25.2,<26.0)"
+    "django-filter (>=25.2,<26.0)",
+    "celery (>=5.5.3,<6.0.0)",
+    "redis (>=7.0.1,<8.0.0)",
+    "django-celery-beat (>=2.8.1,<3.0.0)",
+    "django-celery-results (>=2.6.0,<3.0.0)",
+    "django-redis (>=6.0.0,<7.0.0)"
 ]
 
 
